Not able to adjust Audio input UI volume after plugging headset when current page is Sound->input tab
In some situations which only has one input item in the treeview, audio input volume can't be adjusted(gray out).
Prerequisite:
- If there is only one input device with only one input port, and this input port is active_port, e.g. there is no internal mic, just a mic jack on the machine, this issue will happen.
- In this machine won't show "selection icon" when plugging input audio device (some machines will show this selection icon, but some doesn't)
Steps to reproduce:
- Open GNOME Settings
- Change tab to Sound-> Input
- Plug headset to headset jack (meant you can't plug your headset before toggle to Sound/Sound->Input tab).
- Device shows up as below picture, but can't adjust it's volume, in the meantime syslog shows:
'''
gnome-control-c[4446]: No devices in the tree, so cannot set the active output
Unable to get default source
'''
Some Other Info:
-
For this machine, if users plug mic in the jack, the function active_input_update() is called ahead of the function add_input_ui_entry(), then we will see "No devices in the tree, so cannot set the active output" from syslog, this issue will be reproduced.
-
On other machines, the add_input_ui_entry() is called ahead of active_input_update(), then there is no problem.