Trigger active_input_update as a workaround in some cases which is reporting things in the wrong order.

https://gitlab.gnome.org/GNOME/gnome-control-center/issues/324